# Projeto-Pim

./: CMakeLists.txt
DBS/Caixa/: 451.csv
DBS/Estoque/: Estoque.csv
DBS/Fornecedores/: Fornecedores.csv
DBS/Logins/: Login.csv
include/: Geral.h
main/: main.cpp
menus/Admin/: admin.cpp
menus/Admin/Submenus/: Forncedores.cpp  Logins.cpp
menus/Caixa/: Caixa.cpp
menus/Caixa/Submenus/: PassarProduto.cpp
menus/Estoque/: Estoque.cpp
src/Gravador/: Gravador.cpp
src/Utilitario/: Gerador.cpp  UltimoID.cpp  ValorProduto.cpp
src/caixa/KG/: PassaProdutoKG.cpp
src/caixa/Unidade/: SubmenuPassarProduto.cpp
src/estoque/: AddProdutoKG.cpp  AddProdutoUnidade.cpp  Alertas.cpp  LerProdutos.cpp
src/fornecedores/: AddFornecedores.cpp  LerFornecedores.cpp
src/logins/: AddLogin.cpp  LerLogin.cpp  VerificarLogin.cpp  VerificarMenu.cpp
